--- a/navbar.css
+++ b/navbar.css
@@ -26,7 +26,24 @@
     border-bottom: 1px solid rgba(0,0,0,.3);
 }
 .my-nav-logo {
-    width: 20%;
     max-width: 100%;
     height: auto;
+}
+
+@media (max-width: 576px) {
+    .my-nav-logo {
+        width: 20%;
+    }
+}
+
+@media (min-width: 577px) {
+    .my-nav-logo {
+        width: 10%;
+    }
+}
+
+@media (min-width: 1025px) {
+    .my-nav-logo {
+        width: 20%;
+    }
 }
