--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 @import url("carousel.css");
 @import url("helpers.css");
 @import url("navbar.css");
+@import url("scrolldown.css");
 
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@600&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=PT+Sans:ital@1&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap');
@@ -23,15 +23,12 @@ body {
 .my-btn-main {
     background-color: #93837e;
     border-color: #93837e;
-    color: black;
+    color: #ffffff;
 }
 .my-btn-main:hover{
     background-color: rgb(147,131,126, 0.8);
-}
-
-.text-logo {
-    font-family: "Dancing Script", cursive;
-    color: black;
+    border-color: rgb(147,131,126, 0.8);
+    color: black
 }
 .my-section-jumbotron{
     position: relative;
@@ -44,11 +41,6 @@ body {
     background-color: transparent;
     height: 94vh;
 }
-
-.main-big-title h1 span {
-    color: black;
-    -webkit-text-stroke: 0.2px black;
-}
 .main-big-title h1 {
     color: #93837e;
     font-family: "Montserrat", sans-serif;
@@ -60,7 +52,6 @@ body {
     position: relative;
     -webkit-text-stroke: 0.2px #93837e;
 }
-
 .main-big-title h6 {
     font-size: 16px;
     color: #242424;
